--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <main>
 
-    <h1>Las pelis : los datos</h1>
-    <p>Visualización de estadísticas globales</p>
+    <h1>Los datos del recomendador</h1>
+    <p>Visualización de estadísticas</p>
 
     <section class="cols-1">
       <figure>
