--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
         <canvas id="byGenre"></canvas>
       </figure>
     </section>
+    <h1>Los datos del recomendador</h1>
+    <p>Visualización de estadísticas</p>
+
+    <section class="cols-1">
+      <figure>
+        <p>Gráfico de barras</p>
+        <h3>Mejores géneros</h3>
+        <canvas id="byYear"></canvas>
+      </figure>
+    </section>
+
 
   </main>
 
