Modificado el título de la gráfica

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="cols-1">
       <figure>
         <p>Gráfico de barras</p>
-        <h3>Mejores géneros</h3>
+        <h3>Películas por años a partir del 2000</h3>
         <canvas id="byYear"></canvas>
       </figure>
     </section>
