--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <canvas id="byGenre"></canvas>
       </figure>
     </section>
-    <h1>Los datos del recomendador</h1>
-    <p>Visualización de estadísticas</p>
+    
 
     <section class="cols-1">
       <figure>
@@ -32,6 +31,15 @@
         <canvas id="byYear"></canvas>
       </figure>
     </section>
+
+    <section class="cols-1">
+      <figure>
+        <p>Gráfico de barras</p>
+        <h3>Películas por ratings</h3>
+        <canvas id="byRating"></canvas>
+      </figure>
+    </section>
+
 
 
   </main>
